--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".Activities.SearchResultsActivity" />
         </activity>
         <activity android:name=".Activities.FicheSerieActivity" android:theme="@style/SecondAppTheme">
 
@@ -35,6 +38,19 @@
         </activity>
 
         <activity android:name=".Activities.FicheEpisodeActivity" android:theme="@style/SecondAppTheme">
+
+        </activity>
+        <activity
+            android:name=".Activities.SearchResultsActivity"
+            android:label="résultats de recherche">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
 
         </activity>
     </application>
